@@ -60,6 +60,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Improve connection status reporting.
       Add support for promiscuous mode.
       Detect DLTs and loopback capture support at run time.
+      Report IEEE 802.11 as PCAP_IF_WIRELESS.
     Windows:
       Fix internal handling of "not supported" error codes from NPF.
       Work around a bug in Npcap 1.00 in case of driver version mismatch.
